--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
 
     final API_URL_DEV = "";
     final API_URL_PROD = "";
@@ -22,6 +22,7 @@ android {
             resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
         }
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -42,6 +43,11 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile 'com.flaviofaria:kenburnsview:1.0.7'
+    compile 'com.daasuu:EasingInterpolator:1.0.0'
+    compile 'devs.mulham.horizontalcalendar:horizontalcalendar:1.1.7'
+
 
     compile 'com.ramotion.cardslider:card-slider:0.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -76,7 +82,7 @@ dependencies {
     'com.ramotion.expandingcollection:expanding-collection:0.9.0'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
 
-    provided 'org.projectlombok:lombok:1.16.16'
+
     provided 'org.glassfish:javax.annotation:10.0-b28'
     testCompile 'junit:junit:4.12'
 }
