--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,11 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "io.realm:realm-gradle-plugin:4.0.0"
         classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:3.0.3'
 
@@ -23,5 +24,6 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
