--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,9 +35,15 @@
             </intent-filter>
         </activity>
 
+
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".Fragment.WelcomeFragmentsActivity"
+            android:screenOrientation="portrait"/>
+
 
         <activity
         android:name=".activities.main"
@@ -47,6 +53,17 @@
             android:name=".activities.DefaultCalendarActivity"
             android:screenOrientation="portrait"/>
 
+        <activity
+            android:name=".activities.StyledMapActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".activities.salons"
+            android:screenOrientation="portrait"/>
+
+        <activity
+        android:name=".activities.DetailsActivity"
+        android:screenOrientation="portrait"/>
 
     </application>
 
