--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     'com.ramotion.expandingcollection:expanding-collection:0.9.0'
     compile 'com.google.android.gms:play-services-maps:11.6.2'
 
+    compile 'io.realm:android-adapters:2.0.0'
 
     provided 'org.glassfish:javax.annotation:10.0-b28'
     testCompile 'junit:junit:4.12'
